added a css file and started to link it with index file
created a seprate folder styles for all css files so that things don't get messy around here.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 <meta charset="utf-8">
 <title>Bayside Beat: Cable Cars</title>
+<link href="styles/responsive.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+<div id="wrapper">Content for New div Tag Goes Here</div>
 </body>
 </html>
