added list to index.html
this unordered list will be later links to different pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 </head>
 
 <body>
-<div id="wrapper">Content for New div Tag Goes Here</div>
+<div id="wrapper">
+  <h1>Bayside Beat</h1>
+  <ul>
+    <li>Home</li>
+    <li>Sights</li>
+    <li>Dinning </li>
+    <li>Lodging</li>
+    <li>Events </li>
+  </ul>
+</div>
 </body>
 </html>
