--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <h1>Bayside Beat</h1>
     <nav>
       <ul>
-        <li>Home</li>
-        <li>Sights</li>
-        <li>Dinning </li>
-        <li>Lodging</li>
-        <li>Events </li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="sights.html">Sights</a></li>
+        <li><a href="#">Dinning </a></li>
+        <li><a href="#">Lodging</a></li>
+        <li><a href="#">Events </a></li>
       </ul>
     </nav>
   </header>
@@ -25,13 +25,13 @@
   </div>
   <main>
     <h2>Riding the Cable Cars</h2>
-    <p>No visit  to San Francisco is complete without a ride on the iconic cable cars that climb  up the vertiginous hills of the city. Of the twenty-three lines established  between 1873 and 1890, three remain: two routes from downtown near Union Square  to Fisherman's Wharf, and a third route along California Street.</p>
+    <p>No visit  to San Francisco is complete without a ride on the iconic cable cars that climb  up the vertiginous hills of the city. Of the twenty-three lines established  between 1873 and 1890, three remain: two routes from downtown near Union Square  to <a href="http://www.fishermanswharf.org/">Fisherman's Wharf</a>, and a third route along California Street.</p>
     <p>The  cable cars rely on cables running constantly beneath the road&rsquo;s surface. The  driver—or gripman—uses a lever to grip the cable to pull the car and its  passengers up the hill. The gripman requires not only great strength, but also  great skill. He needs to know where to release the cable to coast over crossing  cables and points. The conductor works in close cooperation with the gripman,  operating the brake at the rear of the car to prevent it from running out of  control on the downward slopes.</p>
     <p>Although  the cable cars are now mainly a tourist attraction, they&rsquo;re still used by local  commuters to get to and from work. The California Street line is particularly  popular among commuters on weekdays.</p>
   </main>
   <aside>
     <h2>Cable Car Tips</h2>
-    <p>A single  ride on a cable car costs $7. If you plan to travel around the city, it&rsquo;s often  cheaper to buy a Muni Passport, which gives you unlimited rides on San  Francisco&rsquo;s extensive public transport system, including the cable cars (but  not the BART subway system). Even a single-day passport ($20) will save you  money if you make a return trip, and stop off to visit Chinatown one way.</p>
+    <p>A single  ride on a cable car costs $7. If you plan to travel around the city, it’s often  cheaper to buy a <a href="http://www.sfmta.com/cms/mfares/passports.htm">Muni Passport</a>, which gives you unlimited rides on San  Francisco’s extensive public transport system, including the cable cars (but  not the<a href="http://www.bart.gov/"> BART subway</a> system). Even a single-day passport ($20) will save you  money if you make a return trip, and stop off to visit Chinatown one way.</p>
     <p>There  are often long lines at the cable car terminus, particularly on the  Powell-Mason and Powell-Hyde routes. If you don&rsquo;t want to wait, try walking a  few stops along the route. The conductor usually leaves a small number of  places to pick up passengers on the way. The California Street route is  generally less crowded (but not as spectacular).</p>
   </aside>
   <footer>
