main structure of sights.html is ready
structure of sights.html is ready now we have to put contet to main and aside.
and then add css to this page

--- a/sights.html
+++ b/sights.html
@@ -6,5 +6,26 @@
 </head>
 
 <body>
+
+<div id="wrapper">
+  <header>
+    <h1>Bayside Beat</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="sights.html">Sights</a></li>
+        <li><a href="#">Dinning </a></li>
+        <li><a href="#">Lodging</a></li>
+        <li><a href="#">Events </a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>Content for New div Tag Goes Here</main>
+  <aside>Content for New aside Tag Goes Here</aside>
+  <footer>
+    <p>©  Copyright 2013–16 Bayside Beat</p>
+  </footer>
+</div>
+
 </body>
 </html>
