--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <meta charset="utf-8">
 <title>Bayside Beat: Cable Cars</title>
 <link href="styles/responsive.css" rel="stylesheet" type="text/css">
+<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
+<script>var __adobewebfontsappname__="dreamweaver"</script>
+<script src="http://use.edgefonts.net/source-sans-pro:n2,n4:default.js" type="text/javascript"></script>
+
 </head>
 
 <body>
