--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
     </nav>
   </header>
   <div id="hero">
+    <img src="/images/golden_gate.jpg" width="1000" height="547" alt=""/>
     <p><a name="_GoBack">Bayside Beat keeps you  informed of the best places to see, eat, and sleep in the City by the Bay.</a></p>
   </div>
-  <main>
+<main>
     <h2>Riding the Cable Cars</h2>
     <p>No visit  to San Francisco is complete without a ride on the iconic cable cars that climb  up the vertiginous hills of the city. Of the twenty-three lines established  between 1873 and 1890, three remain: two routes from downtown near Union Square  to <a href="http://www.fishermanswharf.org/">Fisherman's Wharf</a>, and a third route along California Street.</p>
     <p>The  cable cars rely on cables running constantly beneath the road&rsquo;s surface. The  driver—or gripman—uses a lever to grip the cable to pull the car and its  passengers up the hill. The gripman requires not only great strength, but also  great skill. He needs to know where to release the cable to coast over crossing  cables and points. The conductor works in close cooperation with the gripman,  operating the brake at the rear of the car to prevent it from running out of  control on the downward slopes.</p>
-    <figure><img src="images/cable_car1.jpg" alt=""/>This is the content for Layout Figure Tag
-      <figcaption>This is the caption for Layout Figure Tag</figcaption>
+    <figure><img src="images/cable_car1.jpg" alt=""/>
+      <figcaption>The cable car terminus near Union Square.
+</figcaption>
     </figure>
     <p>Although  the cable cars are now mainly a tourist attraction, they&rsquo;re still used by local  commuters to get to and from work. The California Street line is particularly  popular among commuters on weekdays.</p>
   </main>
