--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h2>Riding the Cable Cars</h2>
     <p>No visit  to San Francisco is complete without a ride on the iconic cable cars that climb  up the vertiginous hills of the city. Of the twenty-three lines established  between 1873 and 1890, three remain: two routes from downtown near Union Square  to <a href="http://www.fishermanswharf.org/">Fisherman's Wharf</a>, and a third route along California Street.</p>
     <p>The  cable cars rely on cables running constantly beneath the road&rsquo;s surface. The  driver—or gripman—uses a lever to grip the cable to pull the car and its  passengers up the hill. The gripman requires not only great strength, but also  great skill. He needs to know where to release the cable to coast over crossing  cables and points. The conductor works in close cooperation with the gripman,  operating the brake at the rear of the car to prevent it from running out of  control on the downward slopes.</p>
-    <figure><img src="images/cable_car1.jpg" alt=""/>
+    <figure><img src="images/cable_car1.jpg" alt="" class="grayscale"/>
       <figcaption>The cable car terminus near Union Square.
 </figcaption>
     </figure>
