--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <header>
   	 <h1>Bayside Beat</h1>
  	 <nav>
-      <ul>
+ 	   <h2 id="menulink"><a href="#navlinks">Menu</a></h2>
+ 	   <ul id="navlinks">
         <li><a href="index.html">Home</a></li>
         <li><a href="sights.html">Sights</a></li>
         <li><a href="#">Dinning </a></li>
