made position as absolute
making position as  absolute made pic of golden_gate to jump up and the links are shown above them

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   	 <h1>Bayside Beat</h1>
  	 <nav>
  	   <h2 id="menulink"><a href="#navlinks">Menu</a></h2>
- 	   <ul id="navlinks">
+ 	   <ul class="displayed" id="navlinks">
         <li><a href="index.html">Home</a></li>
         <li><a href="sights.html">Sights</a></li>
         <li><a href="#">Dinning </a></li>
