--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  	 <nav>
  	   <h2 id="menulink"><a href="#navlinks">Menu</a></h2>
  	   <ul class="displayed" id="navlinks">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="thispage">Home</a></li>
         <li><a href="sights.html">Sights</a></li>
         <li><a href="#">Dinning </a></li>
         <li><a href="#">Lodging</a></li>
@@ -47,6 +47,7 @@
   <footer>
     <p>©  Copyright 2013–16 Bayside Beat</p>
   </footer>
+  <script type="text/javascript" src="js/menu.js"></script>
 </div>
 </body>
 </html>
