attached responive.css to sights.html
attached responive.css to sights.html to make its style same as index.html and this way it was very fast to style the page.

--- a/sights.html
+++ b/sights.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Bayside Beat: Sightseeing</title>
+<link href="styles/responsive.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -11,9 +12,10 @@
   <header>
     <h1>Bayside Beat</h1>
     <nav>
-      <ul>
+      <h2 id="menulink"><a href="#navlinks">Menu</a></h2>
+      <ul class="displayed" id="navlinks">
         <li><a href="index.html">Home</a></li>
-        <li><a href="sights.html">Sights</a></li>
+        <li><a href="sights.html" class="thispage">Sights</a></li>
         <li><a href="#">Dinning </a></li>
         <li><a href="#">Lodging</a></li>
         <li><a href="#">Events </a></li>
@@ -41,6 +43,7 @@
   <footer>
     <p>©  Copyright 2013–16 Bayside Beat</p>
   </footer>
+  <script type="text/javascript" src="js/menu.js"></script>
 </div>
 
 </body>
