made index.html as two coloum view by using float and also allowed text to flow by sides of img in sights.html
in sights.html allowed text to flow by sides of image by allowing margin to left and floating it to right but this is done for media query min-width 900px.

--- a/sights.html
+++ b/sights.html
@@ -26,7 +26,7 @@
   <main>
     <h2>See the Sights of San Francisco</h2>
     <p>The precipitous hills in San Francisco make it a city best  explored by public transport. Grab a <a href="http://www.sfmta.com/cms/mfares/passports.htm">Muni Passport</a>, and ride the buses,  streetcars, Metro, and—of course—the historic cable cars.</p>
-<figure><img src="images/cable_car2.jpg" alt=""/>
+<figure class="floatright"><img src="images/cable_car2.jpg" alt=""/>
       <figcaption>The front seat of a cable car affords a great view of the city.</figcaption>
     </figure>
     <p>One of the best ways to get familiar with the city is to  ride the Powell-Mason or Powell-Hyde cable car from Market Street. This takes  you through Union Square, up over Nob Hill, through Chinatown, down to the  waterfront at Fisherman’s Wharf. Stop off at Chinatown to soak in the unique  atmosphere of the <a href="http://www.sanfranciscochinatown.com/">largest Chinatown outside Asia</a>. And if Chinese food sets your  mouth watering, there are nearly 200 authentic Chinese restaurants to choose  from.</p>
