did same thing to alcatraz pic
flaoted alcatraz image to left using same technique as before.

--- a/sights.html
+++ b/sights.html
@@ -32,7 +32,7 @@
     <p>One of the best ways to get familiar with the city is to  ride the Powell-Mason or Powell-Hyde cable car from Market Street. This takes  you through Union Square, up over Nob Hill, through Chinatown, down to the  waterfront at Fisherman’s Wharf. Stop off at Chinatown to soak in the unique  atmosphere of the <a href="http://www.sanfranciscochinatown.com/">largest Chinatown outside Asia</a>. And if Chinese food sets your  mouth watering, there are nearly 200 authentic Chinese restaurants to choose  from.</p>
     <p>If you prefer seafood, then you’ll love <a href="http://www.fishermanswharf.org/">Fisherman’s Wharf</a>.  Even if you’re not hungry, just stroll around the waterfront looking at the fishing  boats and watching sea lions basking in the sun. Out in the Bay lies Alcatraz  (the Rock), once home to notorious criminals, including Al Capone.</p>
 <p>To visit Alcatraz, it’s advisable to <a href="http://www.alcatrazcruises.com/index.aspx">book the ferry tickets  online</a> because they usually sell out about a week in advance. You’re left free  to wander around the Rock and the former federal prison. Budget about two and a  half hours for the trip, and be prepared for changeable weather.</p>
-<figure><img src="images/alcatraz.jpg" alt=""/>
+<figure><img src="images/alcatraz.jpg" alt="" class="floatleft"/>
   <figcaption>Alcatraz—former exclusive residence for notorious criminals. </figcaption>
 </figure>
     <p>If you can't get tickets for Alcatraz, take one of the many  boat trips around San Francisco Bay. They take you around the Rock and out to  the Golden Gate Bridge, another iconic symbol of the city.</p>
