--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2,n4,n6:default.js" type="text/javascript"></script>
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
