cahnged code a little due a small error
it was previosly not searching in current directory rather searching from root so changed it.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
   </header>
   <div id="hero">
-    <img src="/images/golden_gate.jpg" width="1000" height="547" alt=""/>
+    <img src="images/golden_gate.jpg" width="1000" height="547" alt=""/>
     <p><a name="_GoBack">Bayside Beat keeps you  informed of the best places to see, eat, and sleep in the City by the Bay.</a></p>
   </div>
 <main>
